examples-generated/metal/gateway.yaml
apiVersion: metal.equinix.jet.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: metal/v1alpha1/gateway
  labels:
    testing.upbound.io/example-name: test
  name: test
spec:
  forProvider:
    privateIpv4SubnetSize: 8
    projectIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example
    vlanIdSelector:
      matchLabels:
        testing.upbound.io/example-name: test

---
